--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "angular": "~1.4.1",
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.5",
-    "angular-route": "~1.4.1"
+    "angular-route": "~1.4.1",
+    "toastr": "~2.1.1"
   }
 }
