--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.5",
     "angular-route": "~1.4.1",
-    "toastr": "~2.1.1"
+    "toastr": "~2.1.1",
+    "async": "~1.3.0"
   }
 }
