--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "express": "4.12.x",
     "faker": "^3.0.0",
     "less-middleware": "^2.0.1",
-    "mongoose": "~3.6.13"
-  },
-  "repository": {},
-  "devDependencies": {
+    "mongoose": "~3.6.13",
     "json-schema-faker": "^0.1.13"
-  }
+  },
+  "repository": {}
 }
