--- a/services/reviewsAPI/Dockerfile
+++ b/services/reviewsAPI/Dockerfile
@@ -6,5 +6,8 @@ COPY . /src
 # Install app dependencies
 RUN cd /src; npm install
 
+#export the mongo uri
+ENV MONGO_URI mongodb://IbmCloud_...<rest of the URI> 
+
 EXPOSE  8080
 CMD ["node", "/src/reviewApi.js"]
