--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
 declared-services:
   MongoDB:
-    type: mongolab
-    plan: sandbox
+    label: mongodb
+    plan: 100
 
 applications:
 - name: microservicesStore
